# prompt-pulse-tui

./: .envrc  .gitlab-ci.yml  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  main.rs
src/data/: billing.rs  buildinfo.rs  cache.rs  claude.rs  claudepersonal.rs  k8s.rs  mod.rs  sysmetrics.rs  tailscale.rs  waifu.rs  waifu_client.rs
src/ui/: layout.rs  mod.rs
src/ui/widgets/: billing_widget.rs  buildinfo.rs  claude.rs  claudepersonal.rs  cpu.rs  disk.rs  help.rs  host.rs  k8s.rs  memory.rs  mod.rs  network.rs  processes.rs  sparkline.rs  tabs.rs  tailscale.rs  temperature.rs  waifu.rs
